resize dashboard charts on resize

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Contact.cshtml
@@ -14,7 +14,7 @@
                 <br />
                 <b>Account Manager</b><br />
                 @Model.AccountManagerName<br />
-                email...
+                <a href="mailto:abc@directagents.com">abc@directagents.com</a>
             </td>
         </tr>
     </table>
