acct mgr silhouette

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/Index.cshtml
@@ -48,8 +48,11 @@
         </dl>
         <div>
             <h5>Account Manager</h5>
+            <div style="float: left; width: 65px; padding: 5px; padding-top: 0px; padding-left: 10px;">
+                <img style="border: 2px solid #000;" width="65" src="~/Images/avatar.png">
+            </div>
             @(Model.Advertiser != null ? Model.Advertiser.AccountManagerName : "")
-            <br /><a href="mailto:abc@directagents.com">abc@directagents.com</a>
+            <br /><a href="mailto:jennifer@directagents.com">jennifer@directagents.com</a>
         </div>
     </div>
     <ul class="tabs-content">
