valueAxis.labels.step = 2

--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/PerformanceVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/PerformanceVis.cshtml
@@ -19,7 +19,7 @@
                 data: values
             }],
             valueAxis: {
-                labels: { format: valueFormat }
+                labels: { format: valueFormat, step: 2 }
             },
             categoryAxis: {
                 categories: ["Last Month", "MTD"]
