--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SpendVis.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Home/SpendVis.cshtml
@@ -22,7 +22,7 @@
                 data: values
             }],
             valueAxis: {
-                labels: { format: valueFormat }
+                labels: { format: valueFormat, step: 2 }
             },
             categoryAxis: {
                 categories: [catName]
@@ -89,7 +89,7 @@
             valueAxis: [
                 {
                     name: "spend",
-                    labels: { format: "C" },
+                    labels: { format: "C", step: 2 },
                     title: { text: title }
                 }
             ],
@@ -126,7 +126,7 @@
             valueAxis: [
                 {
                     name: "spend",
-                    labels: { format: "C" }
+                    labels: { format: "C", step: 2 }
                 }
             ],
             legend: {
@@ -187,7 +187,7 @@
             valueAxis: [
                 {
                     name: "spend",
-                    labels: { format: "C" }
+                    labels: { format: "C", step: 2 }
                 }
             ],
             legend: {
