--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_ConversionReportPartial.cshtml
@@ -78,6 +78,9 @@
                 { field: "Count", name: "Conversions" },
                 { field: "PositiveCount", name: "Sales" }
             ],
+            valueAxis: {
+                labels: { step: 2 }
+            },
             categoryAxis: {
                 field: "OfferId",
                 labels: { template: "#= value #" }
