--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_DailySummaryPartial.cshtml
@@ -140,8 +140,8 @@
                 axisCrossingValue: [0, 1000]
             },
             valueAxis: [
-                { name: "clicks", labels: { format: "N0" }, title: { text: "Clicks" } },
-                { name: "spend", labels: { format: "C" }, title: { text: "Spend" } }
+                { name: "clicks", labels: { format: "N0", step: 2 }, title: { text: "Clicks" } },
+                { name: "spend", labels: { format: "C", step: 2 }, title: { text: "Spend" } }
             ],
             tooltip: {
                 visible: true,
