--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_OfferSummaryPartial.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Reports/_OfferSummaryPartial.cshtml
@@ -113,6 +113,9 @@
                 field: "OfferId",
                 labels: { template: "#= value #" }
             },
+            valueAxis: {
+                labels: { step: 2 }
+            },
             tooltip: {
                 visible: true,
                 format: "N0"
